5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1633_2941.log
== TEST (2019-04-02 18:58:06) 
-- CODE:
entrada= float(int("Vi: "))
entrada= float(int("j: "))
entrada= float(int("n: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    entrada= float(int("Vi: "))
ValueError: invalid literal for int() with base 10: 'Vi: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:58:16) 
-- CODE:
entrada= float(int("vi: "))
entrada= float(int("j: "))
entrada= float(int("n: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    entrada= float(int("vi: "))
ValueError: invalid literal for int() with base 10: 'vi: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:58:37) 
-- CODE:
entrada= float(int("vi: "))
entrada= float(int("j: "))
entrada= float(int("n: "))
print(round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    entrada= float(int("vi: "))
ValueError: invalid literal for int() with base 10: 'vi: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:58:38) 
-- CODE:
entrada= float(int("vi: "))
entrada= float(int("j: "))
entrada= float(int("n: "))
print(round, 2)
-- EXECUTION TIME:
0.128084
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2941/main.py", line 1, in <module>
    entrada= float(int("vi: "))
ValueError: invalid literal for int() with base 10: 'vi: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:59:32) 
-- CODE:
entrada= float(input("vi: "))
entrada= float(input("j: "))
entrada= float(input("n: "))
print(round, 2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:59:43) 
-- CODE:
entrada= float(input("vi: "))
entrada= float(input("j: "))
entrada= float(input("n: "))
print(round, 2)
-- EXECUTION TIME:
0.185744
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:59:47) 
-- CODE:
entrada= float(input("vi: "))
entrada= float(input("j: "))
entrada= float(input("n: "))
print(round, 2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:00:01) 
-- CODE:
entrada= float(input("vi: "))
entrada= float(input("j: "))
entrada= float(input("n: "))
print(round, 2)
-- EXECUTION TIME:
0.175007
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:00:03) 
-- CODE:
entrada= float(input("vi: "))
entrada= float(input("j: "))
entrada= float(input("n: "))
print(round, 2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:00:31) 
-- CODE:
entrada= float(input("vi: "))
entrada= float(input("j: "))
entrada= float(input("n: "))
print(round, 2)
-- EXECUTION TIME:
0.159231
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
<built-in function round> 2
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:00:32) 
-- CODE:
entrada= float(input("vi: "))
entrada= float(input("j: "))
entrada= float(input("n: "))
print(round, 2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:31:32) 
-- CODE:
entrada= float(input("vi: "))
entrada= float(input("j: "))
entrada= float(input("n: "))
print(round, 2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:32:34) 
-- CODE:
ent1= float(input("vi: "))
ent2= float(input("j: "))
ent3= float(input("n: "))
j1=
j2=
j3=
print(round, 2)
-- ERROR:
File "XXXX", line 4
    j1=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
